# uk-lidar-program

./: .gitignore  README.md  ea_lidar.py  pyproject.toml
assets/: UK_Subset_5km_grid.geojson
assets/aoi/: large-wrington.dbf  large-wrington.shp  large-wrington.shx
assets/uk_raster/: uk_subset_5km_raster.dbf  uk_subset_5km_raster.shp  uk_subset_5km_raster.shx
experimentation/: Minimum_Selenium_Example.ipynb  Subsample_UK_Grid.ipynb  Subsample_UK_Raster.ipynb
legacy/: utils.py
src/: main.py  tile_scraper.py  utils.py
