[tool.poetry]
name = "uk-lidar-program"
version = "0.1.0"
description = "Python code to bulk download UK Environment Agency LiDAR data"
authors = ["Kevin Mayer <kdmayer@stanford.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
selenium = "^4.0.0"
urllib3 = "^1.26.12"
tqdm = "^4.64.0"
zipfile39 = "^0.0.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
